// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes class when hovered 1`] = `
<a
  className="sc-bdnxRM bPiSQd"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Link changes class when hovered 2`] = `
<a
  className="sc-bdnxRM fsVBXD"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Link changes class when hovered 3`] = `
<a
  className="sc-bdnxRM bPiSQd"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;
